SUBDIRS =  data \
           compiler \
           compiler/opcodes \
           compiler/processors/arm \
           compiler/processors/ia32 \
           compiler/processors/c \
           format \
           format/pe \
           format/signatures \
           format/tables \
           executer/compiler \
           executer/linker \
           executer/runtime \
           executer/runtime/RuntimeClasses \
           runnable \
           console

if TESTS
SUBDIRS+=  tools/tdump
endif


DIST_SUBDIRS = ${SUBDIRS}

